fixed the white gap on the right of the page

--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -351,6 +351,7 @@
     }
 
     .headshotCropped {
-        height: 37vh;
+        height: 34vh;
+        margin-bottom: 3vh;
     }
 }
